msg overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,7 @@ header #back-button {
   display: flex;
   flex-direction: column;
   margin-bottom: 2px;
+  overflow-wrap: break-word;
 }
 
 .msg-content {
